test/testdata/classes/methods/invalid_property_assignment_error.lox
class Foo {
  bar() {}
}
Foo().bar.y = 1; // error: property assignment is not valid for 'function' object
